serviceCards API and docs added
