# v2-route.js
@@ -19,6 +19,7 @@ const attributeRoutes = require('./v2/routes/attributeRoutes');
 const stockRoutes = require('./v2/routes/stockRoutes');
 const currencyRoutes = require('./v2/routes/currencyRoutes');
 const clientRoutes = require('./v2/routes/clientRoutes');
+const serviceCardRoutes = require('./v2/routes/serviceCardRoutes');
 
 // API's
 router.use('/items', itemsRoutes);
@@ -35,6 +36,7 @@ router.use('/attributes', attributeRoutes);
 router.use('/stocks', stockRoutes);
 router.use('/currencies', currencyRoutes);
 router.use('/clients', clientRoutes);
+router.use('/serviceCards', serviceCardRoutes);
 
 // router.use('/currencies', currencyRoutes);
 
